# dictfilter

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  Pipfile  README.md  pyproject.toml  setup.py
tests/: test_django.py  test_query.py
