[tool.poetry]
name = "dictfilter"
version = "0.0.0"
description = "Filter python dictionaries based on a list of field names."
authors = ["Chris Latham <cl@bink.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
ruff = "^0.0.253"
black = "^23.1.0"
isort = "^5.12.0"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"


[tool.black]
line-length = 88

[tool.isort]
line_length = 88
profile = "black"

[tool.ruff]
line-length = 88

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
